# SC4021-project

./: .gitignore  EXPERIMENT.md  README.md  analysis_export.py  evaluate_pipeline.py  main.py  new_processing.ipynb  processing.ipynb  pyproject.toml  reddit_scraper.py  requirements.txt  update_processing.ipynb  visualize_corrections.py
Data Cleaning Pipeline/: GEMINI.md  GEMINI_comments.md  Pipeline.md  build_index.py  comment_timing_logs.json  compare_schema.py  extract_unique_values.py  failed_item.json  finalize_labels.py  index.json  openai_headless.py  processed_item.json  remove_selected_by_reasoning_phrase.py  run_comment_headless_pipeline.py  run_headless_pipeline.py  sample.json  test_gemini_context.sh  test_openai_context.py
Data Cleaning Pipeline/Tools/: get_next_data.py  submit_classification.py
Data Cleaning Pipeline/dashboard/: app.py
Data Cleaning Pipeline/dashboard_comments/: app.py
Data Cleaning Pipeline/data/: db_bryan.json  db_leonard.json  db_ryan.json
Data Cleaning Pipeline/labeler/: app.py  state.json
Data Cleaning Pipeline/software_check/: .dockerignore  db_bryan.json  db_leonard.json  db_ryan.json  plan.md  profiles.json
SC4021 Data Collection/backend/: Dockerfile  api.py  test_api.py
SC4021 Data Collection/frontend/: next.config.ts
articles_extraction/: GEMINI_new.md  analyze_checkpoint.py  checkpoint.json  classification_server.py  convert_schema.py  merge_checkpoints.py  merged_checkpoint.json  note.md  relevance_filter.py  relevant_checkpoint.json  scrape_articles.py  seed_discovery.py  seeds_config.py  server.py  test_classification_server.py  test_server.py  validate_schema.py
articles_extraction_old/: content_extractor.py  seed_discovery.py  seeds_config.py  utils.py
backend/: classification_pipeline.ipynb  elastic_search.py  minitester.py  upload_json.py
backend/nlp/: classifier.py  (+1 more)
data/: emoticon_dict.json  slang_dict.json
diagrams/: pipeline.md
enhanced-search/: .gitignore  README.md  embedding_info.json  generate_submission_data.py  index_data.py  prepare_output_data.py  requirements.txt  search_engine.py  search_ui_enhanced.html
hn-crawler/: test_system.py
preprocessing/: microtextnorm.py  netLingoScraper.py
random_check_75/: check_labels.py  index.html  sample75.json  server.py
reddit_crawlers/: new_processing.ipynb  processing.ipynb  test_scraper.ipynb  update_processing.ipynb
x-scraper/: process_tweets.py
x_scraper/: process_tweets.py  twitter_scraper.py
(+3965 files in other folders)
